--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -32,7 +32,7 @@
   "commands": {
     "hard-reset": {
       "suggested_key": {
-        "default": "Ctrl+Shift+Alt+Y"
+        "default": "Ctrl+Shift+Y"
       },
       "description": "Hard Reset: キャッシュを無視してページを再読み込みする"
     },
